# hybrid-rendering-engine

./: .gitignore  .gitmodules  CMakeLists.txt  HybridEngine.sln
HybridEngine/: Camera.cpp  Camera.h  ColorShader.cpp  ColorShader.h  Graphics.cpp  Graphics.h  HybridEngine.cpp  HybridEngine.vcxproj  HybridEngine.vcxproj.filters  IOHandler.cpp  IOHandler.h  Model.cpp  Model.h  OpenGLRenderer.cpp  OpenGLRenderer.h  SystemClass.cpp  SystemClass.h  resource.h  shader-error.txt
src/: EngineWindow.cpp  EngineWindow.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  main.cpp  shader.fs  shader.vs
